guide 傳送至 website 伺服器

--- a/.github/workflows/deploy-userguide-latest.yml
+++ b/.github/workflows/deploy-userguide-latest.yml
@@ -7,7 +7,7 @@ name: Deploy User Guide (latest)
 
 on:
   push:
-    branches: [ dev, gitflow ]
+    branches: [ dev ]
   pull_request:
     branches: [ dev ]
 
